Alert allways visible bug fixed. Also Satan is happy now.

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -57,6 +57,7 @@ float: none;
     top: 50%;
     left: 200px;
     z-index: 10000000;
+    display: none;
 }
 
 .alert-body {
